Fix technologies on mobile

--- a/cv/cv.css
+++ b/cv/cv.css
@@ -174,6 +174,10 @@ job-header .pills {
     #skills-section {
         grid-template-columns: 100%;
     }
+
+    #technologies {
+	grid-column: 1;
+    }
 }
 
 
